set up the project structure including leaked environment variable, worked on skillService and skilledworkerService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
 spring.application.name=ClientService
-spring.datasource.url=jdbc:postgresql://localhost/client_service
-#spring.data.jdbc.dialect=postgresql
-spring.jpa.hibernate.ddl-auto=create
+spring.data.jdbc.dialect=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-
-
 spring.config.import=secrets.properties
