--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=ClientService
 spring.data.jdbc.dialect=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.config.import=secrets.properties
+spring.config.import=secret.properties
