--- a/src/main/resources/secret.properties
+++ b/src/main/resources/secret.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:31615/railway
 
 spring.datasource.username = postgres
