--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.data.jdbc.dialect=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.config.import=secret.properties
+#spring.datasource.url = jdbc:postgresql://localhost/service
+spring.jpa.hibernate.ddl-auto=create
 
