updating user profiles

--- a/src/main/resources/secret.properties
+++ b/src/main/resources/secret.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username = postgres
 spring.datasource.password = dLxHqPCophaMTuqkDxYavUrNeOgNVqXB
 
-spring.datasource.url=jdbc:postgresql://localhost/client_service
+#spring.datasource.url=jdbc:postgresql://localhost/client_service
 #spring.datasource.username=postgres
 #spring.datasource.password=Charisma7
 
