--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,50 @@
+#name: Java CI with Maven
+#
+#on:
+#  push:
+#    branches: [ "development" ]
+#
+#jobs:
+#  test:
+#    name: Buld image
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v1
+#      - name: Set up JDK 18
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 18
+#      - name: Maven Package
+#        run: mvn -B clean package -DskipTests
+#
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up JDK 18
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '18'
+#          distribution: 'temurin'
+#          cache: maven
+#      - name: Build with Maven
+#        run: mvn -B package --file pom.xml -DskipTests
+#
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: Build and push
+#        uses: docker/build-push-action@v5
+#        with:
+#          push: true
+#          tags: meshackyaro/sabiconnect:latest
+
+
 name: Java CI with Maven
 
 on:
@@ -5,20 +52,8 @@ on:
     branches: [ "development" ]
 
 jobs:
-  test:
-    name: Buld image
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 18
-        uses: actions/setup-java@v1
-        with:
-          java-version: 18
-      - name: Maven Package
-        run: mvn -B clean package -DskipTests
-
   build:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
     steps:
@@ -38,8 +73,30 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           push: true
           tags: meshackyaro/sabiconnect:latest
+
+  deploy:
+    name: Deploy to Server
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/development'  # Only deploy from the development branch
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@v0.1.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            docker pull meshackyaro/sabiconnect:latest
+            docker stop my-container || true
+            docker rm my-container || true
+            docker run -d --name my-container -p 80:80 meshackyaro/sabiconnect:latest
