--- a/src/main/resources/secret.properties
+++ b/src/main/resources/secret.properties
@@ -19,3 +19,5 @@ paystack.secret.key=sk_test_8d12207056b586e4ef5b07087d0179bca19a2290
 paystack.verify.payment.url=https://api.paystack.co/transaction/verify
 paystack.initiate.payment=https://api.paystack.co/transaction/initialize
 
+spring.h2.console.enabled=true
+
