--- a/src/main/resources/secret.properties
+++ b/src/main/resources/secret.properties
@@ -1,8 +1,12 @@
 
-#spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:31615/railway
-spring.datasource.url = jdbc:postgresql://localhost/service
+spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:31615/railway
+#spring.datasource.url = jdbc:postgresql://localhost/service
+#spring.datasource.url=jdbc:postgresql://db:5432/<database_name>
+
 
 spring.jpa.hibernate.ddl-auto=update
+
+
 
 #spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:31615/railway
 
