--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,26 @@
+#spring.application.name=ClientService
+#spring.data.jdbc.dialect=postgresql
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.config.import=secret.properties
+##spring.datasource.url = jdbc:postgresql://localhost/service
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=${DATABASE_URL: jdbc:postgresql://localhost:8080}/service
+#spring.datasource.username=${DATABASE_USERNAME:postgres}
+#spring.datasource.password=${DATABASE_PASSWORD:password}
+
+
 spring.application.name=ClientService
 spring.data.jdbc.dialect=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.config.import=secret.properties
-#spring.datasource.url = jdbc:postgresql://localhost/service
 spring.jpa.hibernate.ddl-auto=update
+
+# Correct the URL, making sure the port and database name are right
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432}/service
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:password}
+
+
 
