--- a/src/main/resources/secret.properties
+++ b/src/main/resources/secret.properties
@@ -1,6 +1,6 @@
 
 #spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:31615/railway
-spring.datasource.url=jdbc:postgresql://localhost:5432/railway
+#spring.datasource.url=jdbc:postgresql://localhost:5432/railway
 #spring.datasource.url=jdbc:postgresql://localhost:5432/service
 #spring.datasource.url = jdbc:postgresql://localhost/service
 #spring.datasource.url=jdbc:postgresql://db:5432/<database_name>
@@ -10,12 +10,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 
-#spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:31615/railway
+spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:31615/railway
 
 
 spring.datasource.username = postgres
-#spring.datasource.password = dLxHqPCophaMTuqkDxYavUrNeOgNVqXB
-spring.datasource.password =Charisma7
+spring.datasource.password = dLxHqPCophaMTuqkDxYavUrNeOgNVqXB
+#spring.datasource.password =Charisma7
 #spring.datasource.password =password
 
 
