--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.data.jdbc.dialect=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.config.import=secret.properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # Correct the URL, making sure the port and database name are right
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432}/service
